<resources>
    <string name="app_name">DeudoresApp</string>
    <string name="title_list">Lista</string>
    <string name="title_create">Crear</string>
    <string name="title_read">Leer</string>
    <string name="title_update">Actualizar</string>
    <string name="title_delete">Borrar</string>
    <string name="create_new_user">Crear un nuevo usuario</string>
    <string name="title_buttoncreate">Crear</string>
    <string name="type_name">Digite el nombre</string>
    <string name="name_hint">Nombre</string>
    <string name="type_phone">Digite el numero de telefono:</string>
    <string name="phone_hint">Telefono</string>
    <string name="type_debt">Digite la deuda:</string>
    <string name="debt_hint">Deuda</string>
    <string name="debtors_lista">Lista de deudores</string>
    <string name="name_example">Jeferson David Gallo Aristizabal</string>
    <string name="debt_example">120000</string>
    <string name="title_detail">Detalles</string>
    <string name="search_debtors">Buscar deudores</string>
    <string name="search">Buscar</string>
    <string name="phone_example">3023333254</string>
    <string name="phone_value">Teléfono: %s</string>
    <string name="debt_values">Valor de la deuda: $%s</string>
    <string name="delete_debtor">Borrar deudor</string>
    <string name="button_delete">Borrar</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="title_splash">Deudores App</string>
    <string name="splash_description">Hoy no fio mañana sí.</string>
    <string name="title_register">Registrar nuevo usuario</string>
    <string name="input_email">Ingrese su correo electrónico:</string>
    <string name="email">Correo electrónico</string>
    <string name="input_password">Ingerese su contraseña:</string>
    <string name="password">Contraseña</string>
    <string name="repeat_password">Repita la contraseña</string>
    <string name="registrer">Registrarse</string>
    <string name="input_email_error">Ingrese algún correo electrónico</string>
    <string name="input_len_email_error">La contraseña debe tener mínimo 6 digitos</string>
    <string name="password_not_equal">Las contraseñas no coinciden</string>
    <string name="title_login">Ingresar a Deudores App</string>
    <string name="title_login_button">Ingresar</string>
    <string name="register">Registrarse</string>
    <string name="input_password_error">Debe ingresar una contraseña</string>
    <string name="non_existent_user">El usuario no existe.</string>
</resources>